// test1 proto

package HaiZhong;

message Pet {
	enum PetType {
		DOG,
		PANDA,
	}
	optional string name = 1;
	optional PetType type = 2;
  repeated PetType friend_to = 3;
}

message Student {
	enum Sex {
		MALE,
		FEMALE,
	}
  optional string name = 1;
  optional uint32 age = 2;
  optional int32 xyz = 3;
  optional uint64 def = 4;
  optional int64 ghi = 5;
  optional bool graduated = 6;
  optional double weight = 7;
  optional Sex sex = 25;
  repeated int32 scores = 11;
  repeated string alias = 15;
  optional Pet first_pet = 12;
  repeated Pet pets = 9;
  optional Student partner = 18;
  optional char symbol = 19;
}

message SchoolClass {
  optional int32 number = 1;
  optional string alias = 2;
  optional Student captain = 3;
	repeated Student students = 5;
}

message StudentRequest {
	enum OpType {
		ADD,
		REMOVE,
		UPDATE,
	}
	required OpType op_type = 1;
	required int32 class_number = 2;
	optional string student_name = 3;
	optional Student student = 4;
}

message StudentResponse {
	required int32 return_code = 1 [default = -1];
	optional string error_message = 2;
}

service StudentManagement {
	rpc AddStudent(StudentRequest) returns (StudentResponse) {
		option deadline = 5;
		option security_level = NONE;
	}
	rpc DeleteStudent(StudentRequest, bool) returns (StudentResponse) {
		option deadline = 3;
	}
}


